c/examples/gcc/testsuite/c-c++-common/torture/aarch64-vect-lane-2.c
// { dg-do compile { target "aarch64*-*-*" } }
// { dg-xfail-if "" { *-*-* } { "-flto -fuse-linker-plugin" } { "" } }
void
search_line_fast (void)
{
  __builtin_aarch64_im_lane_boundsi (4, 0, 0); /* { dg-error "" } */
}

